[gd_scene load_steps=19 format=3 uid="uid://b7hf5w8nxkgvq"]

[ext_resource type="Script" uid="uid://dx38cl2wfggri" path="res://scripts/game.gd" id="1_game"]
[ext_resource type="PackedScene" uid="uid://bvnx4jpyxvhqo" path="res://scenes/player.tscn" id="8_player"]
[ext_resource type="Script" uid="uid://x0bnonghuli0" path="res://scripts/isometric_camera.gd" id="9_camera"]
[ext_resource type="PackedScene" uid="uid://cevuj3wqn8kxp" path="res://scenes/npc.tscn" id="10_npc"]
[ext_resource type="PackedScene" uid="uid://cx6yb7xqiqy8d" path="res://objects/biscuit_jar.tscn" id="11_jar"]
[ext_resource type="PackedScene" uid="uid://bxphv8gxrykwj" path="res://ui/game_ui.tscn" id="12_ui"]
[ext_resource type="PackedScene" uid="uid://cxvh4pqv3n8fb" path="res://ui/performance_monitor.tscn" id="13_performance"]
[ext_resource type="PackedScene" uid="uid://clhx8v4d3qy2r" path="res://environment/object_label.tscn" id="14_label"]
[ext_resource type="PackedScene" uid="uid://cpvug3wlypb3j" path="res://environment/elevator.tscn" id="17_elevator"]
[ext_resource type="PackedScene" uid="uid://cfappif73htlf" path="res://models/floorplan.blend" id="17_floorplan"]
[ext_resource type="PackedScene" uid="uid://bwb8c5rgdmn1l" path="res://models/floor.blend" id="18_floor"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.9, 0.9, 0.95, 1)
sky_horizon_color = Color(0.8, 0.8, 0.85, 1)
ground_bottom_color = Color(0.6, 0.6, 0.65, 1)
ground_horizon_color = Color(0.7, 0.7, 0.75, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 3
ambient_light_color = Color(0.95, 0.95, 1, 1)
ambient_light_energy = 0.8
tonemap_mode = 2

[sub_resource type="NavigationMesh" id="NavigationMesh_1"]
vertices = PackedVector3Array(-16, 0.5, -16, -16, 0.5, 16, 16, 0.5, 16, 16, 0.5, -16)
polygons = [PackedInt32Array(0, 1, 2, 3)]

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(0.3, 2, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0, 0.8, 0, 1)
emission_enabled = true
emission = Color(0, 0.5, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(0.3, 2, 0.3)

[node name="Game" type="Node3D" groups=["game"]]
script = ExtResource("1_game")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, 0.5, -0.5, 0, 0.704432, 4.01052)
light_energy = 0.4

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.71735, 0, -0.904255)
visible = false
navigation_mesh = SubResource("NavigationMesh_1")

[node name="Player" parent="." instance=ExtResource("8_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9566, 0.1, -9.54785)

[node name="CameraRig" type="Node3D" parent="."]
script = ExtResource("9_camera")

[node name="Camera3D" type="Camera3D" parent="CameraRig"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 10, 20, 10)
projection = 1
size = 20.0

[node name="FadeRaycast" type="RayCast3D" parent="CameraRig"]

[node name="SecurityGuard" parent="." instance=ExtResource("10_npc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.37958, 0.1, 1.67393)

[node name="GuardLabel" parent="SecurityGuard" instance=ExtResource("14_label")]
label_text = "üëÆ GUARD 1"
show_distance = 8.0

[node name="SecurityGuard2" parent="." instance=ExtResource("10_npc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, 0.1, -8.5)

[node name="GuardLabel2" parent="SecurityGuard2" instance=ExtResource("14_label")]
label_text = "üëÆ GUARD 2"
show_distance = 8.0

[node name="SecurityGuard3" parent="." instance=ExtResource("10_npc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.1, -5)

[node name="GuardLabel3" parent="SecurityGuard3" instance=ExtResource("14_label")]
label_text = "üëÆ GUARD 3"
show_distance = 8.0

[node name="PatrolWaypoints" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.89232, 0, 4.40795)

[node name="Waypoint1" type="Marker3D" parent="PatrolWaypoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.71735, 0, -13.0573)

[node name="Waypoint2" type="Marker3D" parent="PatrolWaypoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.71735, 0, -2.90425)

[node name="Waypoint3" type="Marker3D" parent="PatrolWaypoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6601, 0, 0.0957451)

[node name="Waypoint4" type="Marker3D" parent="PatrolWaypoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.9506, 0, 1.09574)

[node name="Waypoint5" type="Marker3D" parent="PatrolWaypoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.71735, 0, 1.09574)

[node name="Waypoint6" type="Marker3D" parent="PatrolWaypoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6585, 0, -12.6189)

[node name="PatrolWaypoints2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, 0, -8.5)

[node name="Waypoint1" type="Marker3D" parent="PatrolWaypoints2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="Waypoint2" type="Marker3D" parent="PatrolWaypoints2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -5)

[node name="Waypoint3" type="Marker3D" parent="PatrolWaypoints2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -12)

[node name="Waypoint4" type="Marker3D" parent="PatrolWaypoints2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -10)

[node name="PatrolWaypoints3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -5)

[node name="Waypoint1" type="Marker3D" parent="PatrolWaypoints3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 8)

[node name="Waypoint2" type="Marker3D" parent="PatrolWaypoints3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 5)

[node name="Waypoint3" type="Marker3D" parent="PatrolWaypoints3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -3)

[node name="Waypoint4" type="Marker3D" parent="PatrolWaypoints3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)

[node name="Waypoint5" type="Marker3D" parent="PatrolWaypoints3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -8)

[node name="BiscuitJar" parent="." instance=ExtResource("11_jar")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.5029, 1, -8.32094)

[node name="BiscuitJarLabel" parent="BiscuitJar" instance=ExtResource("14_label")]
label_text = "üç™ BISCUIT JAR"
show_always = true

[node name="ExitElevator" type="StaticBody3D" parent="." groups=["exit_door", "interactables"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.914, 0, -9.71927)
collision_layer = 8

[node name="MeshInstance3D" type="MeshInstance3D" parent="ExitElevator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.7011, 1, -8.55648)
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExitElevator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_1")

[node name="ExitLabel" parent="ExitElevator" instance=ExtResource("14_label")]
label_text = "üö™ EXIT"
show_always = true

[node name="GameUI" parent="." instance=ExtResource("12_ui")]

[node name="PerformanceMonitor" parent="." instance=ExtResource("13_performance")]
visible = false

[node name="GameStart" type="Node" parent="."]

[node name="Timer" type="Timer" parent="GameStart"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="walls" parent="." instance=ExtResource("17_floorplan")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0352497, 0, -0.0537515)

[node name="floor" parent="." instance=ExtResource("18_floor")]
visible = false

[node name="Elevator" parent="." instance=ExtResource("17_elevator")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.4257, -0.100002, -10.1742)

[connection signal="timeout" from="GameStart/Timer" to="." method="_on_game_start_timer_timeout"]
